[package]

name = "openaq-client"
version = "0.0.1"
authors = ["Ignacio Carbajo <icarbajop@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/igncp/openaq-client"
description = "Unofficial OpenAQ API Client"
documentation = "https://igncp.github.io/openaq-client"
exclude = [
    "examples/*",
]

[dependencies]
hyper = "0.10.10"
hyper-native-tls = "0.2.2"
serde = "1.0"
serde_derive = "1.0.4"
serde_json = "1.0.2"
serde-transcode = "1.0.0"
